# peacockdb

./: .clangd  .gitignore  .gitmodules  Cargo.toml  IMPLEMENTATION_PLAN.md  build.md  build.sh  implementation.md  init-gpu.sh  init.sh  style_guide.md
.github/workflows/: cpp-cpu.yml
cpp/: CMakeLists.txt
cpp/include/: peacock_gpu.h
cpp/src/: gpu_executor.cpp
cpp/tests/cpu/: test_executor.cpp
cpp/tests/gpu/: test_cudf.cpp
peacockdb/: Cargo.toml
peacockdb-core/: Cargo.toml
peacockdb-core/src/: gpu_rule.rs  lib.rs
peacockdb-ffi/: Cargo.toml  build.rs
peacockdb-ffi/src/: lib.rs
peacockdb/src/: main.rs
scripts/: build.sh  init-gpu.sh  init.sh  sync_compiledb.sh
testdata/: generate_testdata.sh
testdata/plans/: filter_agg.txt  group_join_sort.txt  join_sort.txt
