[package]
name = "peacockdb"
version = "0.1.0"
edition = "2024"

[features]
cpu-only = ["peacockdb-ffi/cpu-only"]

[dependencies]
peacockdb-core = { path = "../peacockdb-core" }
peacockdb-ffi = { path = "../peacockdb-ffi" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
datafusion = "44"
